--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -686,7 +686,7 @@ a {
   transition: color 0.6s;
 }
 .cid-tDHdSeQQUI {
-  background-color: #000000;
+  background-image: url("../../../assets/images/gif.gif");
 }
 .cid-tDHdSeQQUI .mbr-fallback-image.disabled {
   display: none;
