--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -686,7 +686,7 @@ a {
   transition: color 0.6s;
 }
 .cid-tDHdSeQQUI {
-  background-image: url("../../../assets/images/tumblr-mwfjh8hve41qzl9pho1-400.gif");
+  background-image: url("../../../assets/images/tumblr-mi4ruyicmd1s5nl47o1-500.gif");
 }
 .cid-tDHdSeQQUI .mbr-fallback-image.disabled {
   display: none;
@@ -717,9 +717,9 @@ a {
 .cid-tDHdUHnn5n {
   padding-top: 15px;
   padding-bottom: 15px;
-  background-color: #000000;
+  background-color: #131313;
   overflow: hidden;
 }
 .cid-tDHdUHnn5n .media-container-row .mbr-text {
-  color: #9dd5a1;
+  color: #797c77;
 }
