--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -686,7 +686,7 @@ a {
   transition: color 0.6s;
 }
 .cid-tDHdSeQQUI {
-  background-image: url("../../../assets/images/tumblr-mi4ruyicmd1s5nl47o1-500.gif");
+  background-image: url("../../../assets/images/gifto.gif");
 }
 .cid-tDHdSeQQUI .mbr-fallback-image.disabled {
   display: none;
